# 101

./: AI_STYLE_GUIDE.md  LICENSE  README.md  game_replay.html  pyproject.toml  rule.md
.github/workflows/: ci.yml  deploy.yml
data/: game_data_for_spectate.json
data/episodes/: episode_data_0.parquet  episode_data_100.parquet  episode_data_200.parquet  episode_data_300.parquet  episode_data_400.parquet  episode_data_500.parquet  episode_data_600.parquet  episode_data_700.parquet
models/: 101_d3qn.pth  advantage_net.pt  strategy_net.pt
scripts/: collect_data.py  collect_data_cfr.py  initialize_model.py  spectate.py  train_ai.py  train_cfr.py
src/_101/: __init__.py
src/one_o_one/: game.py
tests/: test_action_mask.py  test_game.py  test_penalty_carry.py
